# AUV-Fault-Detection

./: .gitignore  Closed_Loop_Sim_690_PID.asv  Closed_Loop_Sim_690_PID.m  Dockerfile  PID_690.m  README.md  Sim_690_Rev12.m  avl_log_processor.ipynb  read_shared_files.m  scratchpad.m
.devcontainer/: devcontainer.json
avl/src/avl_690/: CMakeLists.txt  package.xml
avl/src/avl_690/launch/: 690_nodes.launch  690_nodes_canards.launch  690_v2-1.launch  690_v2-2.launch  690_v2-3-canards.launch  690_v2-3.launch  690_v2-4.launch  full_system_simulation.launch  full_system_simulation_canards.launch
avl/src/avl_690/src/comms/: comms_manager_node_690_canards.config
avl/src/avl_690/src/control/: height_control_node_690.config  pid_attitude_control_canards_node.cpp  pid_attitude_control_node_690_canards.config  pid_depth_control_node_690.config  rpm_control_node_690.config  ss_line_control_node_690.config
avl/src/avl_690/src/devices/: front_actuators_node_690.calib  front_actuators_node_690.config
avl/src/avl_690/src/guidance/: primitive_guidance_canards_node.cpp
avl/src/avl_690/src/navigation/: sins_node_690.config  sins_parser_node_690.config
avl/src/avl_asio/: CMakeLists.txt  README.md  package.xml
avl/src/avl_asio/include/avl_asio/: connection_closed_exception.h  match.h  match_parser.h  match_util.h  serial_port.h  tcp_server.h  tcp_socket.h  timeout_exception.h  udp_socket.h
avl/src/avl_asio/launch/: asio_test.launch  avl_asio.launch
avl/src/avl_asio/src/: serial_port.cpp  tcp_server.cpp  tcp_socket.cpp  udp_socket.cpp
avl/src/avl_asio/src/protocol/: device_packet.cpp
avl/src/avl_asio/src/test_node/: packet_test_node.config  packet_test_node.cpp  serial_port_test_node.config  serial_port_test_node.cpp  tcp_server_test_node.config  tcp_server_test_node.cpp  tcp_socket_test_node.config  tcp_socket_test_node.cpp  udp_socket_test_node.cpp  udp_socket_test_node1.config  udp_socket_test_node2.config
avl/src/avl_comms/: CMakeLists.txt  README.md  package.xml
avl/src/avl_comms/include/avl_comms/: command_handler.h  comms.h  packet_handler.h  transmit_queue.h
avl/src/avl_comms/launch/: avl_comms.launch  bsd_test.launch
avl/src/avl_comms/src/: command_handler.cpp  packet_handler.cpp
avl/src/avl_comms/src/node/: acoustic_channel_node.config  acoustic_channel_node.cpp  comms_manager_node.config  comms_manager_node.cpp  ethernet_channel_node.config  ethernet_channel_node.cpp  iridium_channel_node.config  iridium_channel_node.cpp
avl/src/avl_comms/src/test_node/: bsd_passthrough_test_node.cpp  bsd_tester_node.config  bsd_tester_node.cpp  fsd_tester_node.config  fsd_tester_node.cpp  packet_handler_test_node.cpp
avl/src/avl_control/: CMakeLists.txt  README.md  package.xml
avl/src/avl_control/include/avl_control/: control_node.h
avl/src/avl_control/launch/: avl_control.launch
avl/src/avl_control/src/algorithm/: pid.cpp  state_space_model.cpp
avl/src/avl_control/src/node/: height_control_node.cpp  hinf_attitude_control_node.config  hinf_attitude_control_node.cpp  hinf_attitude_model.config  line_control_node.config  line_control_node.cpp  line_control_node_dive.config  orbit_control_node.config  orbit_control_node.cpp  orbit_control_node_dive.config  pid_attitude_control_node.config  pid_attitude_control_node.cpp  pid_attitude_control_node_dive.config  pid_depth_control_node.cpp  pid_depth_control_node_dive.config  pid_depth_control_node_ss.config  pid_speed_control_node.config  pid_speed_control_node.cpp  rpm_control_node.cpp  speed_control_node.config  speed_control_node.cpp  ss_attitude_control_node.config  ss_attitude_control_node.cpp  ss_depth_control_node.config  ss_depth_control_node.cpp  ss_line_control_node.cpp
avl/src/avl_core/: CMakeLists.txt  README.md  package.xml
avl/src/avl_core/include/avl_core/: console_style.h  logger.h  monitored_subscriber.h  node.h
avl/src/avl_core/src/: logger.cpp  node.cpp
avl/src/avl_core/src/protocol/: abort_packet.cpp  action_packet.cpp  command_packet.cpp  device_packet.cpp  event_packet.cpp  field.cpp  heartbeat_packet.cpp  micro_heartbeat_packet.cpp  micro_passthrough_packet.cpp  packet.cpp  packet_validator.cpp  parameter.cpp  parameter_list.cpp  passthrough_packet.cpp  response_packet.cpp
avl/src/avl_core/src/util/: byte.cpp  file.cpp  geo.cpp  logic.cpp  math.cpp  matrix.cpp  misc.cpp  network.cpp  ros.cpp  string.cpp  time.cpp  vector.cpp
avl/src/avl_devices/: CMakeLists.txt  README.md  package.xml
avl/src/avl_devices/launch/: avl_devices.launch
avl/src/avl_devices/src/: device_node.cpp
avl/src/avl_guidance/: CMakeLists.txt  README.md  package.xml
avl/src/avl_guidance/launch/: avl_guidance.launch
avl/src/avl_msgs/: CMakeLists.txt  README.md  package.xml
avl/src/avl_msgs/action/: Mission.action
avl/src/avl_msgs/msg/: ActuatorControlMsg.msg  AhrsMsg.msg  BISTMsg.msg  ByteArrayMsg.msg  CommsRxMsg.msg  DataRxMsg.msg  FinCalibrationMsg.msg  FinsMsg.msg  Float64SetpointMsg.msg  GpsMsg.msg  GyrocompassMsg.msg  HeartbeatMsg.msg  ImuMsg.msg  IridiumSignalMsg.msg  JoystickMsg.msg  LNavUTCMsg.msg  LineSetpointMsg.msg  LinkquestDvlMsg.msg  MagBearingMsg.msg  MissionStatusMsg.msg  MultibeamMsg.msg  NavigationMsg.msg  OBSTDVLMsg.msg  OBSTGpsposMsg.msg  OBSTPdepthMsg.msg  OBSTSVSMsg.msg  OrbitSetpointMsg.msg  PathfinderDvlMsg.msg  PwmMsg.msg  RangeMsg.msg  SafetyStatusMsg.msg  TemperatureMsg.msg  TwogMsg.msg  VehicleStateMsg.msg  WhoiDataMsg.msg  WhoiStatusMsg.msg  WhoiTranspondersMsg.msg  XeosMsg.msg
avl/src/avl_msgs/srv/: ActuatorSrv.srv  ByteArraySrv.srv  CommsTxSrv.srv  DataTxSrv.srv  MissionControlSrv.srv  MissionModeSrv.srv  MotorSrv.srv  SafetyAbortSrv.srv  SailModeSrv.srv  SetMagnetometerCalibrationSrv.srv  StrobeSrv.srv  VehicleDynamicsSrv.srv  WhoiDownlinkSrv.srv
avl/src/avl_system/: CMakeLists.txt  README.md  package.xml
avl/src/avl_system/launch/: avl_system.launch
avl/src/avl_tools/: CMakeLists.txt  README.md  package.xml
avl/src/avl_tools/launch/: actuator_calibration.launch  tail_junction_calibration.launch
avl/src/avl_tools/scripts/: avl.service  avl.sh  chrony.conf
(+192 files in other folders)
