<?xml version="1.0"?>
<package format="2">

    <!-- Package Info -->
    <name>avl_asio</name>
    <version>1.0.0</version>
    <description>Package containing AVL ASIO libraries</description>
    <maintainer email="eagle138@vt.edu">Stephen Krauss</maintainer>
    <url type="website">https://cmar.ece.vt.edu/avl</url>
    <license>TODO</license>

    <!-- Build Tool Dependency -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Documentation Dependency -->
    <doc_depend>doxygen</doc_depend>

    <!-- ROS Dependencies -->
    <depend>roscpp</depend>

    <!-- AVL Package Dependencies -->
    <depend>avl_core</depend>

</package>
